--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -1134,7 +1134,7 @@ Only one Power Stone can be used per transmutation.",Data/CodexEntry.lua(00221),
 4567,199130,Slay the Dealer with a Hammer with Hex of Tenacity,Data/MapChallenges.lua(05052),,,,,,,,使用戰鎚殺死交易者，<red></red>同時啟用<red></red>剛韌禁咒,,OK,,
 4568,199130,Slay the Gate Keeper with Bombardier Spider's barrage attack without dying,Data/MapChallenges.lua(05066),,,,,,,,在沒有死亡的情況下，<red></red>利用投彈蜘蛛的彈幕攻擊殺死守門人,,OK,,
 4569,199130,Slay Adath with a Lightning Gun while above 50% Health,Data/MapChallenges.lua(05079),,,,,,,,生命高於50%時，<red></red>使用閃電槍殺死亞坦司,,OK,,
-4570,199130,Slay the Master of the Balls with 5 active Hexes without dying,Data/MapChallenges.lua(05095),,,,,,,,在沒有死亡的情況下，<red></red>殺死球王，<red></red>同時啟用5個禁咒,,OK,,
+4570,199130,Slay the Master of the Balls with 5 active Hexes without dying,Data/MapChallenges.lua(05095),,,,,,,,在沒有死亡的情況下，<red></red>殺死耍球大師，<red></red>同時啟用5個禁咒,,OK,,
 4571,199130,Slay Vex the Uninvited while it is affected by Enraged,Data/MapChallenges.lua(05107),,,,,,,,殺死憤怒狀態的不速之客．維克斯,,OK,,
 4572,199130,Slay the Creeping Chaos with a Bomb with Hex of Time and Hex of Pain,Data/MapChallenges.lua(05122),,,,,,,,使用炸彈殺死伏行混沌，<red></red>同時啟用<red></red>時間禁咒和<red></red>疼痛禁咒,,OK,,
 4573,199160,Slay all Chromatic Essence aspects without dying with 5 active Hexes,Data/MapChallenges.lua(05146),,,,,,,,在沒有死亡的情況下，<red></red>殺死五彩原質，<red></red>同時啟用5個禁咒,,OK,,
@@ -5317,7 +5317,7 @@ Casting a demon power while wielding a Tome grants <condition_name>.<condition_d
 101366,33785,Defeat the Pumpking,maps/SecretPumpkinLevel/scenario.lua(00065),,Scenario SecretPumpkinLevel quest_text,,,0,,,擊敗南瓜王,,new,,
 101367,33785,The Pumpking is dead! Long live...err?,maps/SecretPumpkinLevel/scenario.lua(00076),,Scenario SecretPumpkinLevel quest_text,,,0,,,南瓜王已死！新王萬歲！,,new,,
 101355,33474,The Long Arms of the Pumpking,maps/SecretPumpkinLevel/scenario.lua(00125),,Scenario SecretPumpkinLevel Text,,,0,,,南瓜王的左右手,,new,,
-100490,32747,Support Act,maps/TheBastille/objects.lua(04967),,,,,,,,支援行動,,OK,,
+100490,32747,Support Act,maps/TheBastille/objects.lua(04967),,,,,,,,暖場團員,,OK,,
 100491,32747,Slave to Chaos,maps/TheBastille/objects.lua(04983),,,,,,,,混沌之奴,,OK,,
 100492,32747,Joe the Coach,maps/TheBastille/objects.lua(05018),,,,,,,,教練．喬,,OK,,
 100493,32747,Faithless ,maps/TheBastille/objects.lua(05046),,,,,,,,無信者,,OK,,
@@ -5499,7 +5499,7 @@ Casting a demon power while wielding a Tome grants <condition_name>.<condition_d
 100669,32747,"Vex, the Uninvited",maps/TheBastille/objects.lua(25271),,,,,,,,不速之客．維克斯,,OK,,
 100670,32747,Creeping Chaos,maps/TheBastille/objects.lua(25309),,,,,,,,伏行混沌,,OK,,
 100671,32747,The Juggler,maps/TheBastille/objects.lua(25323),,,,,,,,雜耍人,,OK,,
-100672,32747,Master of the Balls,maps/TheBastille/objects.lua(25345),,,,,,,,球王,,OK,,
+100672,32747,Master of the Balls,maps/TheBastille/objects.lua(25345),,,,,,,,耍球大師,,OK,,
 100673,32747,Slave to Chaos,maps/TheBastille/objects.lua(25426),,,,,,,,混沌之奴,,OK,,
 100674,32747,Adath,maps/TheBastille/objects.lua(26116),,,,,,,,亞坦司,,OK,,
 100675,32747,Middle Linebacker,maps/TheBastille/objects.lua(26138),,,,,,,,中線衛,,OK,,
@@ -5509,7 +5509,7 @@ Casting a demon power while wielding a Tome grants <condition_name>.<condition_d
 100679,32747,The Gate Keeper,maps/TheBastille/objects.lua(26268),,,,,,,,守門人,,OK,,
 100680,32747,Outside Linebacker,maps/TheBastille/objects.lua(26310),,,,,,,,外線衛,,OK,,
 100681,32747,Slave to Chaos,maps/TheBastille/objects.lua(26360),,,,,,,,混沌之奴,,OK,,
-100682,32747,Support Act,maps/TheBastille/objects.lua(26371),,,,,,,,支援行動,,OK,,
+100682,32747,Support Act,maps/TheBastille/objects.lua(26371),,,,,,,,暖場團員,,OK,,
 100683,32747,Cornerback,maps/TheBastille/objects.lua(26382),,,,,,,,角衛,,OK,,
 100684,32747,Safety,maps/TheBastille/objects.lua(26555),,,,,,,,安全衛,,OK,,
 100685,32747,Undying Druid,maps/TheBastille/objects.lua(34809),,,,,,,,不死德魯伊,,OK,,
