--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -5918,7 +5918,7 @@ Casting a demon power while wielding a Tome grants <condition_name>.<condition_d
 101090,32747,...and the Creek of the Unnameable ,maps/TheBastille/scenario.lua(01954),,Scenario TheBastille Text,,,,,,……以及無語之河,,OK,,
 101091,32747,The Primordial Gates...,maps/TheBastille/scenario.lua(02010),,Scenario TheBastille Text,,,,,,太始之門……,,OK,,
 101092,32747,"Adath, the Self-Carved...",maps/TheBastille/scenario.lua(02034),,Scenario TheBastille Text,,,,,,自雕者．亞坦司……,,OK,,
-101093,32747,The Brooding Juggler...,maps/TheBastille/scenario.lua(02052),,Scenario TheBastille Text,,,,,,鬱悶雜耍人……,,OK,,
+101093,32747,The Brooding Juggler...,maps/TheBastille/scenario.lua(02052),,Scenario TheBastille Text,,,,,,鬱悶雜技團……,,OK,,
 101094,32747,"Vex, the Uninvited...",maps/TheBastille/scenario.lua(02076),,Scenario TheBastille Text,,,,,,不速之客．維克斯……,,OK,,
 101095,32747,The Creeping Chaos...,maps/TheBastille/scenario.lua(02094),,Scenario TheBastille Text,,,,,,伏行混沌……,,OK,,
 101096,32747,...and the Zagoravian Giants,maps/TheBastille/scenario.lua(02112),,Scenario TheBastille Text,,,,,,……以及扎戈拉維亞巨人隊,,OK,,
