彩虹地窖 => 閃爍地窖

--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -5945,7 +5945,7 @@ Casting a demon power while wielding a Tome grants <condition_name>.<condition_d
 101117,32747,...and the Slimy Fever,maps/TheBastille/scenario.lua(02558),,Scenario TheBastille Text,,,,,,……以及黏液狂熱,,OK,,
 101118,32747,...and the Growing Stones,maps/TheBastille/scenario.lua(02576),,Scenario TheBastille Text,,,,,,……以及發育石,,OK,,
 101119,32747,...and the Amorphous Chargers,maps/TheBastille/scenario.lua(02594),,Scenario TheBastille Text,,,,,,……以及無形衝鋒者,,OK,,
-101120,32747,...and the Iridescent Cellar,maps/TheBastille/scenario.lua(02612),,Scenario TheBastille Text,,,,,,……以及彩虹地窖,,OK,,
+101120,32747,...and the Iridescent Cellar,maps/TheBastille/scenario.lua(02612),,Scenario TheBastille Text,,,,,,……以及閃爍地窖,,OK,,
 101121,32747,...and Those Blasted Pests,maps/TheBastille/scenario.lua(02630),,Scenario TheBastille Text,,,,,,……以及那些該死的害蟲,,OK,,
 101122,32747,Marie of the Bayou...,maps/TheBastille/scenario.lua(02686),,Scenario TheBastille Text,,,,,,河口的瑪麗……,,OK,,
 101123,32747,The Forsaken in the Marsh...,maps/TheBastille/scenario.lua(02704),,Scenario TheBastille Text,,,,,,被遺棄在沼澤之物……,,OK,,
