補上 "裝備時" 的描述

--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -2281,7 +2281,7 @@ Tag <UseDefaultEmote> not present in original text",
 636,194283,Greedy <name>,Lua/LootWeapon.lua(00181),,masculine,,,,,,貪婪<name>,,OK,,
 3709,195189,Greedy <name>,Lua/LootWeapon.lua(00182),,feminine,,,,,,貪婪<name>,,OK,,
 3710,195189,Greedy <name>,Lua/LootWeapon.lua(00183),,neuter,,,,,,貪婪<name>,,OK,,
-637,194283,While equipped: Monsters drop <param>% more gold,Lua/LootWeapon.lua(00184),,,,,,,,提升<param>%敵人的金幣掉落數。,,OK,,
+637,194283,While equipped: Monsters drop <param>% more gold,Lua/LootWeapon.lua(00184),,,,,,,,裝備時：提升<param>%敵人的金幣掉落數。,,OK,,
 638,194283,Vicious <name>,Lua/LootWeapon.lua(00194),,masculine,,,,,,兇暴<name>,,OK,,
 3711,195189,Vicious <name>,Lua/LootWeapon.lua(00195),,feminine,,,,,,兇暴<name>,,OK,,
 3712,195189,Vicious <name>,Lua/LootWeapon.lua(00196),,neuter,,,,,,兇暴<name>,,OK,,
@@ -2324,7 +2324,7 @@ Tag <UseDefaultEmote> not present in original text",
 657,194283,Elder <name>,Lua/LootWeapon.lua(00305),,masculine,,,,,,長者<name>,,OK,,
 3731,195189,Elder <name>,Lua/LootWeapon.lua(00306),,feminine,,,,,,長者<name>,,OK,,
 3732,195189,Elder <name>,Lua/LootWeapon.lua(00307),,neuter,,,,,,長者<name>,,OK,,
-658,194283,While equipped: Gain <param>% more XP,Lua/LootWeapon.lua(00308),,,,,,,,獲得<param>%額外經驗。,,OK,,
+658,194283,While equipped: Gain <param>% more XP,Lua/LootWeapon.lua(00308),,,,,,,,裝備時：獲得<param>%額外經驗。,,OK,,
 659,194283,Inquisitor's <name>,Lua/LootWeapon.lua(00318),,masculine,,,,,,審判者<name>,,OK,,
 3733,195189,Inquisitor's <name>,Lua/LootWeapon.lua(00319),,feminine,,,,,,審判者<name>,,OK,,
 3734,195189,Inquisitor's <name>,Lua/LootWeapon.lua(00320),,neuter,,,,,,審判者<name>,,OK,,
@@ -2340,7 +2340,7 @@ Tag <UseDefaultEmote> not present in original text",
 665,194283,Cursed <name>,Lua/LootWeapon.lua(00354),,masculine,,,,,,詛咒<name>,,OK,,
 3739,195189,Cursed <name>,Lua/LootWeapon.lua(00355),,feminine,,,,,,詛咒<name>,,OK,,
 3740,195189,Cursed <name>,Lua/LootWeapon.lua(00356),,neuter,,,,,,詛咒<name>,,OK,,
-666,198919,Damage increased by <param>%. While equipped: Minimal gold drops,Lua/LootWeapon.lua(00357),,,,,,,,提升<param>%傷害，極少金幣掉落。,,OK,,
+666,198919,Damage increased by <param>%. While equipped: Minimal gold drops,Lua/LootWeapon.lua(00357),,,,,,,,提升<param>%傷害。裝備時：極少金幣掉落。,,OK,,
 667,194283,Gilded <name>,Lua/LootWeapon.lua(00368),,masculine,,,,,,鍍金<name>,,OK,,
 3741,195189,Gilded <name>,Lua/LootWeapon.lua(00369),,feminine,,,,,,鍍金<name>,,OK,,
 3742,195189,Gilded <name>,Lua/LootWeapon.lua(00370),,neuter,,,,,,鍍金<name>,,OK,,
@@ -2390,11 +2390,11 @@ Tag <UseDefaultEmote> not present in original text",
 688,194283,<name> of Luck,Lua/LootWeapon.lua(00542),,masculine,,,,,,幸運<name>,,OK,,
 3763,195189,<name> of Luck,Lua/LootWeapon.lua(00543),,feminine,,,,,,幸運<name>,,OK,,
 3764,195189,<name> of Luck,Lua/LootWeapon.lua(00544),,neuter,,,,,,幸運<name>,,OK,,
-689,194283,While equipped: Find <param>% more items,Lua/LootWeapon.lua(00545),,,,,,,,提升<param>%物品掉落數。,,OK,,
+689,194283,While equipped: Find <param>% more items,Lua/LootWeapon.lua(00545),,,,,,,,裝備時：提升<param>%物品掉落數。,,OK,,
 690,194283,<name> of Extraordinary Luck,Lua/LootWeapon.lua(00555),,masculine,,,,,,極運<name>,,OK,,
 3765,195189,<name> of Extraordinary Luck,Lua/LootWeapon.lua(00556),,feminine,,,,,,極運<name>,,OK,,
 3766,195189,<name> of Extraordinary Luck,Lua/LootWeapon.lua(00557),,neuter,,,,,,極運<name>,,OK,,
-691,194283,While equipped: Find better items,Lua/LootWeapon.lua(00558),,,,,,,,提升找到的物品品質。,,OK,,
+691,194283,While equipped: Find better items,Lua/LootWeapon.lua(00558),,,,,,,,裝備時：提升找到的物品品質。,,OK,,
 692,194283,<purple>Enemies drop gold piles when critically hit</purple>,Lua/LootWeapon.lua(00568),,,,,,,,<purple>暴擊時敵人會掉落金幣。</purple>,,OK,,
 693,194283,<purple>Critical hits create ball ligntnings</purple>,Lua/LootWeapon.lua(00578),,,,,,,,<purple>暴擊會產生電光球。</purple>,,OK,,
 694,194283,<purple>Larger Daze area. Dash attack inflicts damage to all dazed enemies</purple>,Lua/LootWeapon.lua(00587),,,,,,,,<purple>大範圍暈眩。直劈攻擊會對所有暈眩的敵人造成傷害。</purple>,,OK,,
